--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
 <h1>Maze Machine</h1>
 <p>Draw your maze, then use the 'WASD' keys to move</p>
-<p>Hit 'm' to mirror</p>
+<p>Hit 'm' to mirror - (under contruction, please check back later!)</p>
 <p>Hit 'o' to save the image</p>
+<p>*Once you draw your maze, travel through it using "WASD"* - (under contruction, please check back later!)</p>
 </body>
 
 </html>
