--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 </head>
 
 <body>
-<h1>Maze Machine</h1>
-<p>Draw your maze, then use the 'WASD' keys to move</p>
-<p>Hit 'm' to mirror - (under contruction, please check back later!)</p>
+<h1>Crazy Connect-the-Dots</h1>
+<p>Draw a line from one point to the other... but be fast!</p>
 <p>Hit 'o' to save the image</p>
-<p>*Once you draw your maze, travel through it using "WASD"* - (under contruction, please check back later!)</p>
 </body>
 
 </html>
