--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-<h1>Crazy Connect-the-Dots</h1>
-<p>Draw a line from one point to the other... but be fast!</p>
-<p>Hit 'o' to save the image</p>
+<h1>Clear The Air</h1>
+<p>'c' to clear the air</p>
+<p>'s' to save the image</p>
 </body>
 
 </html>
